# char

./: .gitignore  .oxlintrc.json  AGENTS.md  Cargo.toml  eslint-plugin-hypr.mjs  package.json  pnpm-lock.yaml
.agents/skills/migrate-to-sqlite/: SKILL.md
.agents/skills/new-changelog/: SKILL.md
.github/actions/hf_download/: action.yaml
.github/workflows/: claw_cd.yaml  cli_desktop_ci.yml  cli_standalone_ci.yml  desktop_build.yaml  desktop_cd.yaml  desktop_publish.yaml  desktop_release.yaml  desktop_staging.yaml  lint.yaml
apps/chrome/: package.json
apps/claw/: Dockerfile
apps/claw/src/: main.rs
apps/cli/: Cargo.toml
apps/cli-web/src/: styles.css
apps/cli/src/: app.rs  cli.rs  error.rs  main.rs  output.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/fastrepl/: index.html  package-lock.json
apps/meetingsucks/: package.json
apps/mobile/: Mobile.podspec  README.md  app.json  metro.config.js  package.json  ubrn.config.yaml
apps/storybook/: package.json
apps/unsigned-web/: astro.config.mjs  netlify.toml  package.json
apps/web/: AGENTS.md  content-collections.ts  netlify.toml  package.json  vite.config.ts
crates/activity-capture/: Cargo.toml
crates/activity-capture-interface/: Cargo.toml  schema.gen.json
crates/activity-capture-interface/src/: lib.rs  types.rs
crates/apple-reminder/: Cargo.toml
crates/audio-actual/: Cargo.toml
crates/cactus/: Cargo.toml
crates/claude/: Cargo.toml
crates/cli-tui/: Cargo.toml
crates/codex/: Cargo.toml
crates/db-activity/: Cargo.toml
crates/db-app/: Cargo.toml  SPEC.md
crates/db-core2/: Cargo.toml
crates/db-core2/src/: lib.rs
crates/db-live-query/: AGENTS.md  Cargo.toml
crates/db3/: Cargo.toml
crates/db3/src/: lib.rs
crates/db3/tests/: e2e.rs
crates/exedev/: Cargo.toml
crates/llm-cactus/: Cargo.toml
crates/llm-cactus/examples/: benchmark.rs  complete.rs
crates/llm-cactus/examples/common/: mod.rs
crates/llm-cactus/src/service/: mod.rs  request.rs  response.rs
crates/local-stt-server/: Cargo.toml
crates/mobile-bridge/: Cargo.toml
crates/model-manager/: Cargo.toml
crates/openai-transcription/: Cargo.toml
crates/opencode/: Cargo.toml
crates/owhisper-client/: Cargo.toml
crates/power/: Cargo.toml
crates/power/src/: lib.rs  macos.rs  windows.rs
crates/resampler/: Cargo.toml
crates/transcribe-cactus/: Cargo.toml
crates/transcribe-core/: Cargo.toml
crates/transcribe-whisper-local/: Cargo.toml
crates/vad-chunking/: Cargo.toml
crates/vad-chunking2/: Cargo.toml
plugins/activity-capture/: Cargo.toml  package.json
plugins/db/: Cargo.toml
plugins/fs-db/: Cargo.toml
plugins/shortcut/: Cargo.toml
plugins/updater2/: Cargo.toml
skills/cli/: SKILL.md
(+621 files in other folders)
