[package]
name = "activity-capture-interface"
version = "0.1.0"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
base64 = { workspace = true }
futures-core = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
url = { workspace = true }

[build-dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
