[package]
name = "db-core2"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-cloudsync = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }
