[package]
name = "power"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSProcessInfo"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_System_Power"] }
